[package]
name = "abseil-flat-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"
fxhash = "0.2.1"

[[bench]]
name = "probe_benches"
harness = false

[dependencies]
fxhash = "0.2.1"
hash_histogram = "0.7.0"
itertools = "0.11.0"
